tests/NormalTests/paczka1/fuzzy1/61298712.err
Error in line 2: yMte A120 21,0
Error in line 5: Tzy8f5 S935 12,2
Error in line 8: Tzy8f5 A92 78,8
Error in line 12: O9AJ6 A92 21,3
Error in line 28: O9AJ6 S414 #8,7
Error in line 29: S935 S414 92,6
